users api added
