# api-doc.yml
@@ -106,3 +106,97 @@ documentation:
             type: string
           statusCode:
             type: number
+
+    -
+      name: UserRequest
+      contentType: "application/json"
+      schema:
+        type: object
+        properties:
+          tripId:
+            type: string
+          title:
+            type: string
+          description:
+            type: string
+          startDate:
+            type: string
+            format: utc datetime
+          endDate:
+            type: string
+            format: utc datetime
+          langauges:
+            type: array
+            items:
+              type: string
+          budgets:
+            type: array
+            items:
+              type: string
+          destinations:
+            type: array
+            items:
+              type: object
+              properties:
+                endDate:
+                  type: string
+                  format: utc datetime
+                country:
+                  type: string
+                address:
+                  type: string
+                name:
+                  type: string
+                description:
+                  type: string
+                mapLocation:
+                  type: string
+                pictures:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      description:
+                        type: string
+                      url:
+                        type: string
+                startDate:
+                  type: string
+                  format: utc datetime
+          members:
+            type: array
+            items:
+              type: object
+              properties:
+                memberId:
+                  type: string
+                favorite:
+                  type: boolean
+                intrestType:
+                  type: string
+                  enum:
+                  - confirmed
+                  - unconfirmed
+          intrests:
+            type: array
+            items:
+              type: string
+          createdAt:
+            type: string
+            format: utc datetime
+          updatedAt:
+            type: string
+            format: utc datetime
+          userId:
+            type: string
+
+    -
+      name: UserResponse
+      contentType: "application/json"
+      schema:
+        type: object
+        properties:
+          message:
+            type: string
+          statusCode:
+            type: number
