# routes/notes/create.js
@@ -1,27 +1,0 @@
-import uuid from "uuid";
-import * as dynamoDbLib from "../../libs/dynamodb-lib";
-import { success, failure } from "../../libs/response-lib";
-
-export async function main(event, context) {
-  const data = JSON.parse(event.body);
-  
-  const params = {
-    TableName: process.env.tbl_notes,
-    Item: {
-      userId: event.requestContext.identity.cognitoIdentityId,
-      noteId: uuid.v1(),
-      content: data.content,
-      name: data.name,
-      attachment: data.attachment,
-      createdAt: Date.now()
-    }
-  };
-
-  try {
-    const res = await dynamoDbLib.call("put", params);
-      return success(res);
-  
-  } catch (e) {
-    return failure({ status: false });
-  }
-}
